HBASE-7002 Fix all 4 findbug performance warnings (Liang Xie)
git-svn-id: https://svn.apache.org/repos/asf/hbase/trunk@1399514 13f79535-47bb-0310-9956-ffa450edef68